Fix html best practices

--- a/tweets.html
+++ b/tweets.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html> 
+<html lang="en"> 
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/style.css">
         <link href="https://alx-apply.hbtn.io/level2/school.css" rel="stylesheet">
-        <script src="behavior.js"></script>
     </head>
 <body class="works_on_smartphone">
     <header>
